# rust

./: .gitignore  .utm-lint.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: example-assets-update.yml  examples.yml  mustache-drift.yml  nightly-performance.yml  publish.yml  pull-request.yml
caching/: Cargo.toml  README.md
caching/src/: cache.rs  config.rs  data_keyed.rs  lib.rs  lru.rs
caching/tests/: concurrency.rs  lru_cache.rs
ci/: publish-crates.sh  setup-trusted-publishing.sh
cloud-request-engine/: Cargo.toml  README.md
cloud-request-engine/src/: constants.rs  data.rs  engine.rs  http.rs  lib.rs  properties.rs  recovery.rs  response.rs  state.rs
cloud-request-engine/tests/: live_transport.rs  mock_client.rs
common-sys/: Cargo.toml  README.md  build.rs
common-sys/src/: lib.rs
device-detection/: Cargo.toml  README.md
device-detection-cloud/: Cargo.toml  README.md
device-detection-cloud/src/: dto.rs  engine.rs  hardware_engine.rs  lib.rs  meta.rs  multi_device.rs
device-detection-cloud/tests/: cloud_engine.rs  hardware_engine.rs
device-detection-onpremise/: Cargo.toml  README.md
device-detection-onpremise/src/: builder.rs  engine.rs  lib.rs
device-detection-onpremise/tests/: detection.rs
device-detection-shared/: Cargo.toml  README.md
device-detection-shared/src/: data.rs  device_data.rs  lib.rs  uach.rs
device-detection-sys/: Cargo.toml  README.md  build.rs
device-detection-sys/src/: lib.rs  shim.c
device-detection/src/: lib.rs
device-detection/tests/: coexistence.rs
docs/: Doxyfile  DoxygenLayout.xml
examples/: Cargo.toml  source.toml
examples-shared/: Cargo.toml
examples-shared/src/: data_file_check.rs  data_paths.rs  endpoint.rs  evidence.rs  find_file.rs  lib.rs  properties.rs
examples-web-shared/: Cargo.toml
examples-web-shared/src/: lib.rs
examples/benches/: Cargo.toml
examples/benches/benches/: dd_onprem_throughput.rs  ipi_onprem_throughput.rs  javascript_builder_render.rs
examples/benches/src/: lib.rs
examples/device-detection-examples/: Cargo.toml  build.rs
examples/device-detection-examples/src/: lib.rs
examples/device-detection-examples/src/web_support/: mod.rs
examples/examples-shared/: Cargo.toml
examples/examples-shared/src/: keys.rs
examples/ip-intelligence-examples/: Cargo.toml  build.rs
examples/ip-intelligence-examples/src/: lib.rs
examples/ip-intelligence-examples/src/web_support/: mod.rs
examples/pipeline-examples/: Cargo.toml
examples/pipeline-examples/src/: lib.rs  star_sign.rs
fodid/: Cargo.toml  README.md
fodid-cloud/: Cargo.toml  README.md
fodid-cloud/src/: data.rs  dto.rs  engine.rs  lib.rs
fodid-cloud/tests/: cloud_fodid.rs
fodid/examples/: parse_and_verify.rs
fodid/src/: error.rs  fodid.rs  lib.rs
fodid/tests/: cloud_51did.rs  fodid_tests.rs
ip-intelligence/: Cargo.toml  README.md
ip-intelligence-cloud/: Cargo.toml  README.md
ip-intelligence-cloud/src/: engine.rs  lib.rs  parse.rs
ip-intelligence-onpremise/: Cargo.toml  README.md
ip-intelligence-onpremise/src/: builder.rs  engine.rs  lib.rs
ip-intelligence-onpremise/tests/: detection.rs
ip-intelligence-shared/: Cargo.toml  README.md
ip-intelligence-shared/src/: data.rs  ip_intelligence_data.rs  lib.rs
ip-intelligence-sys/: Cargo.toml  README.md  build.rs
ip-intelligence-sys/src/: lib.rs  shim.c  symbol_prefix.h
ip-intelligence/src/: cloud.rs  lib.rs  on_premise.rs
ip-intelligence/tests/: facade.rs
javascript-builder/: Cargo.toml  README.md
javascript-builder/src/: builder.rs  constants.rs  data.rs  element.rs  lib.rs  minify.rs  mustache.rs  template_data.rs
javascript-builder/tests/: javascript_builder.rs
json-builder/: Cargo.toml  README.md
json-builder/src/: builder.rs  constants.rs  data.rs  element.rs  lib.rs
json-builder/tests/: json_builder.rs
native/: Cargo.toml  README.md
native/src/: buffer.rs  dd.rs  evidence.rs  ipi.rs  lib.rs  profile.rs  status.rs
native/tests/: smoke.rs
pipeline-core/: Cargo.toml  README.md
pipeline-core/src/: ci_map.rs  constants.rs  element_data.rs  error.rs  evidence.rs  flow_data.rs  flow_element.rs  lib.rs  pipeline.rs  property.rs  typed_key.rs  value.rs
pipeline-core/tests/: core_behaviour.rs
pipeline-engines/: Cargo.toml  README.md
pipeline-engines-fiftyone/: Cargo.toml  README.md
pipeline-engines-fiftyone/src/: constants.rs  evidence_filter.rs  lib.rs  metadata.rs  sequence_element.rs  set_headers_element.rs  share_usage_element.rs  share_usage_tracker.rs
pipeline-engines-fiftyone/tests/: elements.rs
pipeline-engines/src/: aspect_data.rs  aspect_engine.rs  aspect_property_metadata.rs  aspect_property_value.rs  data_file.rs  data_update_service.rs  data_update_status.rs  engine_builder.rs  lazy_loading.rs  lib.rs  missing_property.rs  on_premise_aspect_engine.rs
pipeline-engines/tests/: remote_refresh.rs
pipeline-web/: Cargo.toml  README.md
pipeline-web-axum/: Cargo.toml  README.md
pipeline-web-axum/src/: form.rs  handlers.rs  lib.rs  middleware.rs  process.rs  request.rs  response.rs  result.rs  router.rs  state.rs
pipeline-web-axum/tests/: web_endpoints.rs
pipeline-web/src/: clientside.rs  lib.rs  pipeline.rs  request.rs  response.rs  set_headers.rs
pipeline-web/tests/: web_integration.rs
