[package]
name = "fiftyone-cloud-request-engine"
version = "0.1.0"
description = "Cloud HTTP engine with lazy evidence-keys and accessible-properties discovery and recovery mode for the 51Degrees pipeline."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fiftyone-pipeline-core = { path = "../pipeline-core" }
# default-features = false drops the data-update service (reqwest/notify), which
# the cloud path never uses, so this crate builds for wasm32-wasip1.
fiftyone-pipeline-engines = { path = "../pipeline-engines", default-features = false }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
# Blocking HTTP client for the cloud request. rustls-tls avoids a system
# OpenSSL dependency on Windows. The blocking client is used because the engine
# processes one flow data per thread and does not need an async runtime. The
# url-encoded form body and Retry-After parsing are built on the blocking API.
# Optional and gated behind the `reqwest-client` feature: reqwest::blocking needs
# native sockets and threads, so it does not build for targets such as
# wasm32-wasip1. A consumer on such a target leaves the feature off and supplies
# its own synchronous CloudHttpClient instead.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "form"], optional = true }

[features]
# Compile the built-in blocking reqwest transport (ReqwestClient). Off by default
# so the crate, and every cloud product crate that depends on it, builds without
# reqwest (and so for wasm32-wasip1). Native consumers enable this to use the
# built-in client; otherwise supply a CloudHttpClient via the builder.
reqwest-client = ["dep:reqwest"]

[dev-dependencies]
# A local HTTP server is spun up in tests to exercise the request path without
# reaching the real 51Degrees cloud service.
tiny_http = "0.12"
