[package]
name = "fiftyone-common-sys"
version = "0.1.0"
description = "Raw FFI bindings to common-cxx: ResourceManager, Evidence, Exception, StatusCode and result buffers."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
links = "fiftyone-common-c"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = "1.2"
