[package]
name = "fiftyone-device-detection"
version = "4.5.2"
description = "Device-detection facade re-exporting the engines plus a builder that selects the cloud or on-premise deployment."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Always present: the core pipeline plumbing and the shared device-data model
# (result types and key) every deployment surfaces, plus the engine traits the
# facade re-exports for consumers who want to introspect aspect metadata.
fiftyone-pipeline-core = { version = "4.5.2", path = "../pipeline-core" }
fiftyone-pipeline-engines = { version = "4.5.2", path = "../pipeline-engines" }
fiftyone-pipeline-engines-fiftyone = { version = "4.5.2", path = "../pipeline-engines-fiftyone" }
fiftyone-device-detection-shared = { version = "4.5.2", path = "../device-detection-shared" }

# The on-premise Hash engine. Pulled in only with the `on-premise` feature so a
# cloud-only consumer never links the native common-cxx Hash library.
fiftyone-device-detection-onpremise = { version = "4.5.2", path = "../device-detection-onpremise", optional = true }
fiftyone-native = { version = "4.5.2", path = "../native", default-features = false, features = ["dd"], optional = true }

# The cloud engine and the request engine it reads from. Pulled in only with the
# `cloud` feature.
fiftyone-device-detection-cloud = { version = "4.5.2", path = "../device-detection-cloud", optional = true }
fiftyone-cloud-request-engine = { version = "4.5.2", path = "../cloud-request-engine", optional = true, default-features = false }

[features]
# The full SDK is built and tested here. A cloud-only consumer can opt out of
# the native on-premise engine with `default-features = false, features = ["cloud"]`.
default = ["cloud", "on-premise"]
# Pull in the on-premise Hash engine and the native wrapper it needs.
on-premise = ["dep:fiftyone-device-detection-onpremise", "dep:fiftyone-native"]
# Pull in the cloud engine and the cloud request engine that feeds it.
cloud = ["dep:fiftyone-device-detection-cloud", "dep:fiftyone-cloud-request-engine"]
# Opt into the built-in reqwest HTTP client for the cloud path. Implies `cloud`
# and forwards the feature to the cloud request engine. Off by default so a
# cloud build compiles without reqwest (and so for wasm32-wasip1); a wasm
# consumer leaves it off and supplies its own CloudHttpClient.
reqwest-client = ["cloud", "fiftyone-device-detection-cloud/reqwest-client"]

[dev-dependencies]
# The IP-intelligence facade is brought in only for the cross-facade coexistence
# test, which links a Device Detection on-premise engine and an IP Intelligence
# on-premise engine into one binary and runs a real detection and a real lookup.
# This proves the namespaced common-cxx symbols let both native engines coexist
# at the facade level, not only at the fiftyone-native level. It is a
# dev-dependency so it never touches the published dependency graph.
fiftyone-ip-intelligence = { version = "4.5.2", path = "../ip-intelligence" }
fiftyone-pipeline-core = { version = "4.5.2", path = "../pipeline-core" }
# Depend on this crate itself with reqwest-client enabled, so its own tests get
# the built-in cloud HTTP transport. The library keeps reqwest-client off by
# default (for wasm and lean cloud builds); the examples workspace used to unify
# it on for the whole build, but now that the examples are a separate workspace
# the tests opt in here. Dev-dependencies never reach the published graph, so
# this does not change what a consumer resolves.
fiftyone-device-detection = { path = ".", features = ["reqwest-client"] }

[package.metadata.docs.rs]
# Build the documentation on docs.rs with every feature enabled, so the
# cloud, on-premise and optional paths are all documented.
all-features = true
