[package]
name = "examples-shared"
version = "0.1.0"
description = "Shared example helpers: file-finder, resource-key-from-env, data-file path resolvers, the data-file-age warning, property-as-string and sample evidence."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fiftyone-pipeline-core = { path = "../pipeline-core" }
fiftyone-pipeline-engines = { path = "../pipeline-engines" }
# Date arithmetic for the data-file publish-date age warning. The engine layer
# already exposes publish dates as `chrono::DateTime<Utc>`, so the same crate
# (with the same lean feature set) is used here.
chrono.workspace = true
# Base64 decoding for the obvious-placeholder resource-key check, which
# base64-decodes the key before applying the length tests.
base64.workspace = true

[dev-dependencies]
# Temporary directory trees for the find-file unit tests.
tempfile = "3"
