# Examples workspace.
#
# Separate from the library workspace so the example crates depend on the
# PUBLISHED 51Degrees crates from crates.io by default, exactly as an external
# user would. To build the examples against the local source tree instead (when
# developing unreleased changes), apply the patch file:
#
#   cargo build --config source.toml
#   cargo test  --config source.toml
#
# which redirects every 51Degrees crate to its local path. CI runs the example
# tests with `--config source.toml` BEFORE publishing (validating the change)
# and without it AFTER publishing (validating the released packages).
[workspace]
resolver = "2"
members = [
    "examples-shared",
    "examples-web-shared",
    "ip-intelligence-examples",
    "device-detection-examples",
    "pipeline-examples",
    "benches",
]

[workspace.package]
edition = "2021"
rust-version = "1.94"
license = "EUPL-1.2"
authors = ["51Degrees Engineering <support@51degrees.com>"]
repository = "https://github.com/51Degrees/rust"
homepage = "https://51degrees.com"

[workspace.dependencies]
tokio = "1"
axum = "0.8"
tower = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
csv = "1.3"

# Keep backtraces but strip heavy debug info, mirroring the library workspace.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
