[package]
name = "fiftyone-fodid-cloud"
version = "0.1.0"
description = "Cloud engine that unpacks the 51Degrees identifier (51Did / FODid) block from the cloud JSON response into typed data."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fiftyone-pipeline-core = { path = "../pipeline-core" }
# default-features = false drops the data-update service (reqwest/notify), which
# the cloud path never uses, so this crate builds for wasm32-wasip1.
fiftyone-pipeline-engines = { path = "../pipeline-engines", default-features = false }
fiftyone-cloud-request-engine = { path = "../cloud-request-engine", default-features = false }
fodid = { path = "../fodid" }
serde_json.workspace = true
once_cell.workspace = true

[features]
# Forward the cloud request engine's built-in reqwest client. Off by default so
# this crate builds without reqwest (and so for wasm32-wasip1). A native consumer
# enables it; a wasm consumer leaves it off and supplies its own CloudHttpClient.
reqwest-client = ["fiftyone-cloud-request-engine/reqwest-client"]

[dev-dependencies]
# Used by the integration test to mint a real signed 51Did envelope, so the
# parsed-identifier path is exercised end-to-end.
owid.workspace = true
