[package]
name = "fiftyone-ip-intelligence-onpremise"
version = "4.5.2"
description = "On-premise IP-intelligence engine built over the safe fiftyone-native wrapper."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fiftyone-pipeline-core = { version = "4.5.2", path = "../pipeline-core" }
fiftyone-pipeline-engines = { version = "4.5.2", path = "../pipeline-engines" }
fiftyone-ip-intelligence-shared = { version = "4.5.2", path = "../ip-intelligence-shared" }
# Enable only the IP Intelligence product of the native wrapper. This links IP
# Intelligence's copy of common-cxx alone and never pulls in the Device
# Detection copy, so the two ABI incompatible common-cxx builds never collide in
# an IP Intelligence binary.
fiftyone-native = { version = "4.5.2", path = "../native", default-features = false, features = ["ipi"] }
arc-swap.workspace = true
chrono.workspace = true

[package.metadata.docs.rs]
# Build the documentation on docs.rs with every feature enabled, so the
# cloud, on-premise and optional paths are all documented.
all-features = true
