[package]
name = "fiftyone-ip-intelligence-shared"
version = "4.5.2"
description = "IpIntelligenceData trait with weighted property accessors shared by the cloud and on-premise IP-intelligence engines."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fiftyone-pipeline-core = { version = "4.5.2", path = "../pipeline-core" }
# default-features = false drops the data-update service (reqwest/notify) from
# the shared data model, which never uses it, so the cloud crates that build on
# this one can reach wasm32-wasip1. On-premise builds re-enable it through the
# on-premise engine's own dependency.
fiftyone-pipeline-engines = { version = "4.5.2", path = "../pipeline-engines", default-features = false }

[package.metadata.docs.rs]
# Build the documentation on docs.rs with every feature enabled, so the
# cloud, on-premise and optional paths are all documented.
all-features = true
